--- a/index.html
+++ b/index.html
@@ -83,10 +83,25 @@
                 <div class="catImg"></div>
                 <div class="catTxt">Beauty,Toys & More</div>
             </div>
-    
         </div>
         <div class="festival"></div>
         <div class="offers"></div>
+<div class="dealsSection">
+
+    <div class="deals">
+        <div class="dealsNavBar">
+            <div class="dealsOfTheDay">Deals of the day</div>
+            <div class="clockIcon"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
+            <div class="timeLeft">10:28:18 Left</div>
+            <div class="viewAllButton"><p><a id="viewAllButtonTxt" href="#">VIEW ALL</a></p></div>
+        </div>
+      <div class="dealsNavBarDivider"></div>
+      </div>
+<div class="refurbishedAdd">
+    <img id="refurbishedImg" src="https://images.unsplash.com/photo-1607083206869-4c7672e72a8a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="can't load image">
+</div>
+</div>
+        
     </main>
     <footer>
     </footer>
